@@ -15,6 +15,8 @@ synaptic (0.70~pre2) UNRELEASED; urgency=low
   * gtk/rgdebinstallprogress.cc:
     - merge fix for error string if those contain a ":" 
       (LP: #600658), thanks to Jonathan Thomas and Jean-Baptiste Lallement 
+  * When sorting by support status use STL stable_parition to speed
+    up the list view (thanks to David Purcell)
   
    [ Jean-Baptiste Lallement ]
    * gtk/rgdebinstallprogress.{cc,h}: Terminal shortcuts fixes
